add the models and change to ejs

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "check-format": "prettier --check ."
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "morgan": "~1.9.1"
   },
